<resources>
    <string name="app_name">tununue</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="logo">Logo</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">confirm password</string>
    <string name="tununue">tununue</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="home">Home</string>
    <string name="online_store">Online Store</string>
    <string name="recycle">Recycle</string>
    <string name="scan_bar_code">Scan bar code</string>
    <string name="result">Result</string>
</resources>
