<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_profile_black"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/online_store" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_recycle_black_24dp"
            android:title="@string/recycle" />
    </group>

    <item android:title="More Actions">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_settings_power_black_24dp"
                android:title="@string/log_out" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="About App" />
        </menu>
    </item>

</menu>
